--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
   # end ---------------------------------------
 
   # region --------------- DB ----------------
-  postgres.api:
+  postgres.db:
     image: postgres:14.6-alpine
-    container_name: postgres_fastapi_store
+    container_name: postgres.db
     restart: always
  # end ---------------------------------------
