--- a/src/apps/users/pyproject.toml
+++ b/src/apps/users/pyproject.toml
@@ -16,6 +16,17 @@ psycopg2-binary = "^2.9.9"
 bcrypt = "^4.2.0"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.2"
+pytest-asyncio = "^0.24.0"
+pytest-alembic = "^0.11.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# ----------------------- PYTEST -------------------------
+[tool.pytest.ini_options]
+pythonpath = ["."]
+asyncio_mode="auto"
+addopts='-p no:warnings'
