--- a/src/apps/users/pyproject.toml
+++ b/src/apps/users/pyproject.toml
@@ -29,4 +29,5 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 pythonpath = ["."]
 asyncio_mode="auto"
+asyncio_default_fixture_loop_scope = "function"
 addopts='-p no:warnings'
