fix [Auth, Users]: Добавил фильтрацию для записей, которые попадают в лог-файл и передаются в ELK.

--- a/src/apps/auth/core/log_config.yml
+++ b/src/apps/auth/core/log_config.yml
@@ -14,6 +14,10 @@ formatters:
   json_formatter:
     (): core.logger.JSONFormatter
 
+filters:
+  message_filter:
+    "()": core.logger.LoggingFilter
+
 handlers:
   default:
     formatter: default
