--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,21 +11,21 @@ repos:
       - id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
       - id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        name: Isort Import Sorter
-        language_version: python3.11
-        args: ["--profile=black", "--line-length=90", "--color"]
+#  - repo: https://github.com/pycqa/isort
+#    rev: 5.13.2
+#    hooks:
+#      - id: isort
+#        name: Isort Import Sorter
+#        language_version: python3.11
+#
+#
+#  - repo: https://github.com/psf/black
+#    rev: 24.8.0
+#    hooks:
+#      - id: black
+#        name: Black Formatter
+#        language_version: python3.11
 
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
-    hooks:
-      - id: black
-        name: Black Formatter
-        language_version: python3.11
-        args: ["--line-length=90", "--target-version=py310", "--target-version=py311"]
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
@@ -33,4 +33,3 @@ repos:
       - id: flake8
         name: Flake8 Linter
         language_version: python3.11
-        args: ["--max-line-length=90", "--ignore=F821"]
