--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,5 @@ repos:
       - id: flake8
         name: Flake8 Linter
         language_version: python3.11
+        files: ^src/apps/(auth|users)/.*\.py$
+#        args: ["--max-line-length=90", "--ignore=F821"]
