--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,4 +34,4 @@ repos:
         name: Flake8 Linter
         language_version: python3.11
         files: ^src/apps/(auth|users)/.*\.py$
-#        args: ["--max-line-length=90", "--ignore=F821"]
+        args: ["--max-line-length=90", "--ignore=F821"]
