--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,8 @@ repos:
 #      - id: isort
 #        name: Isort Import Sorter
 #        language_version: python3.11
-#
+#        files: ^src/apps/(auth|users)/.*\.py$
+##        args: ["--profile=black", "--line-length=90", "--color"]
 #
 #  - repo: https://github.com/psf/black
 #    rev: 24.8.0
@@ -25,7 +26,8 @@ repos:
 #      - id: black
 #        name: Black Formatter
 #        language_version: python3.11
-
+#        files: ^src/apps/(auth|users)/.*\.py$
+##        args: ["--line-length=90", "--target-version=py310", "--target-version=py311"]
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
@@ -33,5 +35,5 @@ repos:
       - id: flake8
         name: Flake8 Linter
         language_version: python3.11
-        files: ^src/apps/(auth|users)/.*\.py$
-        args: ["--max-line-length=90", "--ignore=F821"]
+        files: ^src/apps/users
+#        args: ["--max-line-length=90", "--ignore=F821"]
