--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,6 @@ repos:
     rev: 7.1.0
     hooks:
       - id: flake8
-        name: Flake8 Linter
         language_version: python3.11
-        files: ^src/apps/users
-#        args: ["--max-line-length=90", "--ignore=F821"]
+        exclude: "migrations|.git|__pycache__|__init__.py|.env|.env.example"
+        args: ["--max-line-length=90", "--ignore=F821,E704,W503"]
