--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
       - id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
       - id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
 
-#  - repo: https://github.com/PyCQA/isort
+#  - repo: https://github.com/pycqa/isort
 #    rev: 5.13.2
 #    hooks:
 #      - id: isort
@@ -29,11 +29,11 @@ repos:
 #        files: ^src/apps/(auth|users)/.*\.py$
 ##        args: ["--line-length=90", "--target-version=py310", "--target-version=py311"]
 
-  - repo: https://github.com/PyCQA/flake8
+  - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
     hooks:
       - id: flake8
 #        language_version: python3.11
-        files: ^src/apps/users/.*\.py$
+        files: ^src/apps/.*\.py$
         exclude: "migrations|.git|__pycache__|__init__.py|.env|.env.example"
         args: ["--max-line-length=90", "--ignore=F821,E704,W503"]
