--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,7 @@ repos:
     hooks:
       - id: flake8
 #        language_version: python3.11
-        additional_dependencies: ["flake8-pyproject"]
-        files: ^src/apps/.*\.py$
+        files: ^.*\.py$
         exclude: "migrations|.git|__pycache__|__init__.py|.env|.env.example"
         args: ["--max-line-length=90", "--ignore=F821,E704,W503"]
 
