--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,16 @@
-default_install_hook_types: [pre-commit]
-default_stages: [commit, push]
-default_language_version:
-  python: python3.11
+#default_install_hook_types: [pre-commit]
+#default_stages: [commit, push]
+#default_language_version:
+#  python: python3.11
 repos:
+#  - repo: https://github.com/pre-commit/pre-commit-hooks
+#    rev: v4.6.0
+#    hooks:
+#      - id: trailing-whitespace  # убирает лишние пробелы
+#      - id: check-yaml  # проверяет синтаксис .yaml файлов
+#      - id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
+#      - id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
+
 #  - repo: https://github.com/pycqa/isort
 #    rev: 5.13.2
 #    hooks:
@@ -21,18 +29,16 @@ repos:
 #        files: ^src/apps/(auth|users)/.*\.py$
 ##        args: ["--line-length=90", "--target-version=py310", "--target-version=py311"]
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0
+  - repo: local
+#    rev: 7.1.0
     hooks:
       - id: flake8
-#        language_version: python3.11
-        exclude: "migrations|.git|__pycache__|__init__.py|.env|.env.example"
-        args: ["--max-line-length=90", "--ignore=F821,E704,W503"]
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-      - id: trailing-whitespace  # убирает лишние пробелы
-      - id: check-yaml  # проверяет синтаксис .yaml файлов
-      - id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
-      - id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
+        name: flake8
+#        additional_dependencies: ["flake8-pyproject"]
+        entry: flake8
+        language: system
+        types: [python]
+        pass_filenames: false
+#        files: ^src/apps/.*\.py$
+#        exclude: "migrations|.git|__pycache__|__init__.py|.env|.env.example"
+#        args: ["--max-line-length=90", "--ignore=F821,E704,W503"]
