--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,29 +7,29 @@ repos:
       - id: check-case-conflict  # проверяет файлы, которые могут конфликтовать в файловых системах без учета регистра.
       - id: check-merge-conflict  # проверяет файлы, содержащие конфликтные строки слияния.
 
-#  - repo: https://github.com/pycqa/isort
-#    rev: 5.13.2
-#    hooks:
-#      - id: isort
-#        name: Isort
-#        language_version: python3.11
-#        args: [ "--profile=black", "--line-length=90", "--color" ]
-#
-#  - repo: https://github.com/psf/black
-#    rev: 24.8.0
-#    hooks:
-#      - id: black
-#        name: Black
-#        language_version: python3.11
-#        files: \.pyi?$
-#        exclude: "migrations/.*"
-#        args: [
-#          "--check",
-#          "--color",
-#          "--line-length=90",
-#          "--target-version=py310",
-#          "--target-version=py311",
-#        ]
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        name: Isort
+        language_version: python3.11
+        args: [ "--profile=black", "--line-length=90", "--color" ]
+
+  - repo: https://github.com/psf/black
+    rev: 24.8.0
+    hooks:
+      - id: black
+        name: Black
+        language_version: python3.11
+        files: \.pyi?$
+        exclude: "migrations/.*"
+        args: [
+          "--check",
+          "--color",
+          "--line-length=90",
+          "--target-version=py310",
+          "--target-version=py311",
+        ]
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
