Добавил фильтрацию логов в файл конфига.

--- a/src/apps/auth/core/log_config.yml
+++ b/src/apps/auth/core/log_config.yml
@@ -40,6 +40,8 @@ handlers:
     filename: logs/app.log
     mode: a
     encoding: utf8
+    filters:
+      - message_filter
 
 loggers:
   uvicorn:
