fix: Изменил код у filebeat и logstash для многострочных сообщений.

--- a/src/elk/filebeat/config.yml
+++ b/src/elk/filebeat/config.yml
@@ -7,15 +7,12 @@ filebeat.inputs:
     paths:
       - /usr/share/filebeat/logs/*.log
     parsers:
-      # Определение списка парсеров, которые будут применяться к файлам логов
-      - ndjson:
-        # Параметр target указывает, куда будут сохранены разобранные данные.
-        # Пустое значение означает, что данные будут добавлены на верхний уровень события.
-        target: ""
-        # Параметр message_key указывает ключ, который будет использован для извлечения сообщения из JSON-логов.
-        # В данном случае ключ "msg" указывает на поле, содержащее сообщение.
-        message_key: msg
-
+      - multiline:
+          type: pattern
+          # Начало нового события, если строка начинается с "{".
+          pattern: '^{'
+          negate: true
+          match: after
 
 
 output.logstash:
