--- a/src/elk/logstash/pipelines/modsec.conf
+++ b/src/elk/logstash/pipelines/modsec.conf
@@ -9,51 +9,31 @@ input {
 }
 
 filter {
-  # Преобразуем timestamp в формат, который понимает Elasticsearch
-  date {
-    match => ["asctime", "yyyy-MM-dd HH:mm:ss.SSS"]
-    timezone => "UTC"
-    target => "@timestamp"
-    remove_field => ["asctime"]
+  json {
+    source => "message"
+    target => "log_message"
+    remove_field => ["message"]
   }
-  # Преобразование строки message в JSON-формат
-  if [message] and [message] =~ "^{.*}$" {
-    mutate {
-      # Преобразование строки в формат JSON
-      gsub => [
-        # Преобразуем 'key=value' в '"key":"value"'
-        "message", "(\w+)=([^,{}]+)", '"\1":"\2"',
-        # Убираем лишние пробелы после запятых
-        "message", ", ", ","
 
-      ]
+  mutate {
+    rename => {
+      "[log_message][app]" => "app"
+      "[log_message][name]" => "name"
+      "[log_message][level]" => "level"
+      "[log_message][module]" => "module"
+      "[log_message][file]" => "file"
+      "[log_message][line]" => "line"
+      "[log_message][func]" => "func"
+      "[log_message][process]" => "process"
+      "[log_message][thread]" => "thread"
+      "[log_message][message]" => "message"
     }
-
-    json {
-      source => "message"
-      target => "log_message"
-      remove_field => ["message"]
-    }
-
-    mutate {
-      rename => {
-        "[log_message][client_ip]" => "client_ip"
-        "[log_message][client_port]" => "client_port"
-        "[log_message][http_method]" => "http_method"
-        "[log_message][http_path]" => "http_path"
-        "[log_message][http_version]" => "http_version"
-        "[log_message][http_status]" => "http_status"
-        "[log_message][http_protocol]" => "http_protocol"
-        "[log_message][http_host]" => "http_host"
-        "[log_message][http_status_message]" => "message"
-      }
-      remove_field => ["log_message"]
-    }
+    remove_field => ["log_message"]
   }
 
   # Удалим пустые поля, если такие есть
   mutate {
-    remove_field => [ "tags", "host" ]
+    remove_field => [ "tags", "host", "agent", "log" ]
   }
   mutate {
     add_field => { "[@metadata][index]" => "%{app}-%{+YYYY.MM.dd}" }
