--- a/src/apps/auth/pyproject.toml
+++ b/src/apps/auth/pyproject.toml
@@ -20,7 +20,7 @@ bcrypt = "^4.2.0"
 [tool.poetry.group.dev.dependencies]
 flake8-pyproject = "^1.2.3"
 flake8 = "^7.1.1"
-isort = "^5.13.2"
+isort = {extras = ["colors"], version = "^5.13.2"}
 black = "^24.8.0"
 pre-commit = "^3.8.0"
 
