--- a/src/apps/users/pyproject.toml
+++ b/src/apps/users/pyproject.toml
@@ -24,7 +24,7 @@ pytest-alembic = "^0.11.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
-isort = "^5.13.2"
+isort = {extras = ["colors"], version = "^5.13.2"}
 pre-commit = "^3.8.0"
 flake8 = "^7.1.1"
 flake8-pyproject = "^1.2.3"
