fix: Забыл указать рабочую директорию при запуске теста.

--- a/.github/workflows/users.yml
+++ b/.github/workflows/users.yml
@@ -49,4 +49,5 @@ jobs:
       working-directory: ${{ env.WORKING_DIR }}
       run: poetry install --no-root --no-dev
     - name: Run pytest
+      working-directory: ${{ env.WORKING_DIR }}
       run: poetry run pytest -v
