--- a/.github/workflows/users.yml
+++ b/.github/workflows/users.yml
@@ -46,8 +46,18 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-    needs: linters
     steps:
+    - uses: actions/checkout@v4
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+        cache: 'poetry'
+    - name: Install dependencies
+      working-directory: ${{ env.WORKING_DIR }}
+      run: poetry install --no-root --only main
     - name: Run pytest
       working-directory: ${{ env.WORKING_DIR }}
       run: poetry run pytest -v
