--- a/src/apps/auth/.env.example
+++ b/src/apps/auth/.env.example
@@ -1,9 +1,17 @@
-# Postgres connection configuration
-PG_HOST=your_host_or_ip
-PG_PORT=your_db_port
-PG_USER=postgres
-PG_PASSWORD=your_password
-PG_DATABASE=Your_DB_NAME
+# Redis connection configuration
+REDIS_SECURE=True
+REDIS_HOST=0.0.0.0
+REDIS_PORT=6380
+REDIS_USER=your_username
+REDIS_PASSWORD=your_password
+REDIS_DB=0
+REDIS_DECODE_RESPONSES=True
+REDIS_ENCODING=utf-8
+REDIS_POOL_MAX_CONNECTIONS=100
+SSL_KEYFILE=redis/certs/redis.key
+SSL_CERTFILE=redis/certs/redis.crt
+SSL_CERT_REQS=required
+SSL_CA_CERTS=redis/certs/ca.crt
 
 # Startup configuration
 PORT=your_port_for_auth
@@ -14,6 +22,7 @@ PAGE_SIZE=10
 
 # Auth configuration
 TOKEN_URL=http://localhost:your_port_for_auth/api/v1/auth/login/
+USER_ENDPOINT_URL=http://your_port_for_users/api/v1/user/user_for_auth/
 PRIVATE_KEY_PATH=certs/jwt-private.pem
 PUBLIC_KEY_PATH=certs/jwt-public.pem
 ALGORITHM=RS256
