--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Common ------------------------
-PG_HOST=your_host_or_ip
-PG_PORT=your_db_port
+PG_HOST=postgres.db
+PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=your_password
 
@@ -8,10 +8,19 @@ TOKEN_URL=http://localhost:your_port/api/v1/auth/login/
 
 PAGE_SIZE=10
 
-# User/Auth
-PG_DATABASE_USER=Your_DB_NAME
-
 # Auth --------------------
+REDIS_SECURE=True
+REDIS_USER=your_redis
+REDIS_PASSWORD=your_password_redis
+REDIS_DB=0
+REDIS_DECODE_RESPONSES=True
+REDIS_ENCODING=utf-8
+REDIS_POOL_MAX_CONNECTIONS=100
+SSL_KEYFILE=redis/certs/redis.key
+SSL_CERTFILE=redis/certs/redis.crt
+SSL_CERT_REQS=required
+SSL_CA_CERTS=redis/certs/ca.crt
+
 PORT_AUTH=80
 HOST_AUTH=0.0.0.0
 
@@ -28,6 +37,7 @@ CLIENT_ID_AUTH=auth
 CLIENT_SECRET_AUTH=auth_secret
 
 # User -----------------------
+PG_DATABASE_USER=Your_DB_NAME
 PORT_USER=80
 HOST_USER=0.0.0.0
 
