--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis.db
-      - postgres.db
-    restart: always
+    restart: unless-stopped
 
   user.api:
     container_name: user.api
@@ -16,21 +15,23 @@ services:
       context: src/apps/users
       dockerfile: Dockerfile
     depends_on:
-      - redis.db
       - postgres.db
-    restart: always
+    restart: unless-stopped
   # end --------------------------------------
 
   # region -------------- REDIS --------------
   redis.db:
-    image: redis:7.0.5-alpine
     container_name: redis.db
-    restart: always
+    build:
+      context: ./docker
+      dockerfile: redis.Dockerfile
+    restart: unless-stopped
+
   # end --------------------------------------
 
   # region --------------- DB ----------------
   postgres.db:
     image: postgres:14.6-alpine
     container_name: postgres.db
-    restart: always
+    restart: unless-stopped
   # end ---------------------------------------
