feat: Добавил Redis в микросервис Auth.

--- a/src/apps/auth/pyproject.toml
+++ b/src/apps/auth/pyproject.toml
@@ -8,13 +8,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.111.0"
-alembic = "^1.13.2"
-asyncpg = "^0.29.0"
 pyjwt = { extras = ["crypto"], version = "^2.9.0" }
 pydantic-settings = "^2.4.0"
-psycopg2-binary = "^2.9.9"
 bcrypt = "^4.2.0"
+redis = "^5.2.0"
+fastapi = {extras = ["standart"], version = "^0.115.4"}
+httpx = "^0.27.2"
+uvicorn = "^0.32.0"
+python-multipart = "^0.0.17"
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
