--- a/docker/redis.conf
+++ b/docker/redis.conf
@@ -1,7 +1,11 @@
 # Основные настройки
-bind 0.0.0.0
-port 0
-requirepass store_redis
+# Название контейнера redis в docker-compose.yml
+bind redis.db
+port 6379
+
+# Использование ACL файла
+aclfile /usr/local/etc/redis/users.acl
+
 maxmemory 1gb
 
 # Настройки TLS
@@ -9,3 +13,4 @@ tls-port 6380
 tls-cert-file /certs/redis.crt
 tls-key-file /certs/redis.key
 tls-ca-cert-file /certs/ca.crt
+
