--- a/src/apps/users/pyproject.toml
+++ b/src/apps/users/pyproject.toml
@@ -8,12 +8,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.111.0"
 alembic = "^1.13.2"
 asyncpg = "^0.29.0"
 pydantic-settings = "^2.4.0"
 psycopg2-binary = "^2.9.9"
 bcrypt = "^4.2.0"
+fastapi = {extras = ["standart"], version = "^0.115.4"}
+uvicorn = "^0.32.0"
+httpx = "^0.27.2"
+pydantic = {extras = ["email"], version = "^2.9.2"}
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.test.dependencies]
