fix: Переделал создания сертификатов для Redis, теперь будут сертификат клиента и сервера.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -73,6 +73,7 @@ services:
   redis.db:
     environment:
       REDIS_ARGS: "user my_redis on >online_redis ~* +@all"
+      TZ: Europe/Moscow
     ports:
       - "6379:6379"
       - "6380:6380"  # Порт для SSL
