fix: Незначительные изменения.

--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - build
   - deploy
 
-
+include:
   # -------------------------------- Deploy Job -----------------------------
   - local: "/.gitlab/ci-cd/.deploy.gitlab-ci.yml"
   # -------------------------------------------------------------------------
